--- a/lambdas/package.json
+++ b/lambdas/package.json
@@ -17,7 +17,7 @@
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.0.0",
     "@aws-sdk/client-kms": "^3.369.0",
-    "@aws-sdk/client-s3": "^3.369.0",
+    "@aws-sdk/client-secrets-manager": "^3.369.0",
     "@aws-sdk/lib-dynamodb": "^3.369.0",
     "@aws-sdk/types": "^3.0.0"
   }
