Add metals and bloop files to .gitignore
These files are automatically created by my editor integrations, I don’t
want to accidentally commit them and ignoring them means they don’t show
up in my code searches.

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,7 @@ lambdas/target
 lambdas/tools
 project/project/
 /nginx/Brewfile.lock.json
+/.metals/
+/.bloop/
+/project/.bloop/
+/project/metals.sbt
