--- a/conf/touchpoint.CODE.conf
+++ b/conf/touchpoint.CODE.conf
@@ -78,6 +78,7 @@ touchpoint.backend.environments {
                     voucher="2c92c0f8555ce5cf01556e7f01281b7e"
                     digitalVoucher="2c92c0f86fa49142016fa49e9b36286d"
                     delivery="2c92c0f955c3cf0f0155c5d9ddc53bc3"
+                    nationalDelivery="8ad096ca8992481d018992a35483159d"
                     digipack="2c92c0f84b786da2014b91d3629b4298"
                     supporterPlus="8ad09fc281de1ce70181de3b23b2363d"
                 }
