--- a/conf/touchpoint.PROD.conf
+++ b/conf/touchpoint.PROD.conf
@@ -63,6 +63,7 @@ touchpoint.backend.environments {
                     voucher="2c92a0fc55a0dc530155dfa5b8dd56c0"
                     digitalVoucher="2c92a00870ec598001710740c3d92eab"
                     delivery="2c92a0ff55a0e4940155dfa589da2591"
+                    nationalDelivery="8a12999f8a268c57018a27ebddab1460"
                     digipack="2c92a0fb4edd70c8014edeaa4ddb21e7"
                     supporterPlus="8a12865b8219d9b4018221061563643f"
                 }
