fix: use modern TLS protocols and ciphers

--- a/nginx/promotions.conf
+++ b/nginx/promotions.conf
@@ -16,9 +16,9 @@ server {
 
     ssl_session_timeout 5m;
 
-    ssl_protocols TLSv1;
-    ssl_ciphers HIGH:!aNULL:!MD5;
     ssl_prefer_server_ciphers on;
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_ciphers HIGH:!aNULL:!MD5;
 
     # Proxy the Websocket connection to the Webpack server - see https://stackoverflow.com/a/40549432/438886
     location /sockjs-node/ {
