feat: add 3-tier product rate plans to promotions tool

--- a/conf/touchpoint.CODE.conf
+++ b/conf/touchpoint.CODE.conf
@@ -105,6 +105,10 @@ touchpoint.backend.environments {
                 supporterPlus={
                     monthly="8ad08cbd8586721c01858804e3275376"
                     yearly="8ad08e1a8586721801858805663f6fab"
+                    guardianWeeklyRestOfWorldMonthly="8ad097b48f006681018f05a2c0fb0227"
+                    guardianWeeklyRestOfWorldAnnual="8ad097b48f006681018f05a0496e01f4"
+                    guardianWeeklyDomesticAnnual="8ad097b48f006681018f059b755e0140"
+                    guardianWeeklyDomesticMonthly="8ad081dd8ef57784018ef6e159224bfa"
                 }
             }
             invoiceTemplateIds {
