feat: add tier three product and remove s+ ratePLans

--- a/conf/touchpoint.CODE.conf
+++ b/conf/touchpoint.CODE.conf
@@ -81,6 +81,7 @@ touchpoint.backend.environments {
                     nationalDelivery="8ad096ca8992481d018992a35483159d"
                     digipack="2c92c0f84b786da2014b91d3629b4298"
                     supporterPlus="8ad09fc281de1ce70181de3b23b2363d"
+                    tierThree="8ad097b48ff26452019001c67ad32035"
                 }
                 contributions={
                     contributor="2c92c0f85a6b134e015a7fcc183e756f"
@@ -105,10 +106,12 @@ touchpoint.backend.environments {
                 supporterPlus={
                     monthly="8ad08cbd8586721c01858804e3275376"
                     yearly="8ad08e1a8586721801858805663f6fab"
-                    guardianWeeklyRestOfWorldMonthly="8ad097b48f006681018f05a2c0fb0227"
-                    guardianWeeklyRestOfWorldAnnual="8ad097b48f006681018f05a0496e01f4"
-                    guardianWeeklyDomesticAnnual="8ad097b48f006681018f059b755e0140"
-                    guardianWeeklyDomesticMonthly="8ad081dd8ef57784018ef6e159224bfa"
+                }
+                tierThree={
+                    domesticMonthly="8ad097b48ff26452019001cebac92376"
+                    domesticAnnual="8ad081dd8ff24a9a019001d95e4e3574"
+                    restOfWorldMonthly="8ad081dd8ff24a9a019001df2ce83657"
+                    restOfWorldAnnual="8ad097b48ff26452019001e65bbf2ca8"
                 }
             }
             invoiceTemplateIds {
