--- a/conf/touchpoint.PROD.conf
+++ b/conf/touchpoint.PROD.conf
@@ -66,6 +66,7 @@ touchpoint.backend.environments {
                     nationalDelivery="8a12999f8a268c57018a27ebddab1460"
                     digipack="2c92a0fb4edd70c8014edeaa4ddb21e7"
                     supporterPlus="8a12865b8219d9b4018221061563643f"
+                    tierThree="8a1295998ff2ec180190024b287b64c7"
                 }
                 contributions={
                     contributor="2c92a0fe5aacfabe015ad24bf6e15ff6"
@@ -94,6 +95,12 @@ touchpoint.backend.environments {
                     guardianWeeklyRestOfWorldAnnual="8a1292628f51a923018f52a324e45710"
                     guardianWeeklyDomesticAnnual="8a1282048f518d08018f529ead0f3d91"
                     guardianWeeklyDomesticMonthly="8a1288a38f518d01018f529a04443172"
+                }
+                tierThree={
+                    domesticMonthly="8a1299788ff2ec100190025fccc32bb1"
+                    domesticAnnual="8a1288a38ff2af980190025b32591ccc"
+                    restOfWorldMonthly="8a128ab18ff2af9301900255d77979ac"
+                    restOfWorldAnnual="8a1299788ff2ec100190024d1e3b1a09"
                 }
             }
             invoiceTemplateIds {
