Add in new V2 (archive) Tier Three rate plans

--- a/conf/touchpoint.PROD.conf
+++ b/conf/touchpoint.PROD.conf
@@ -97,6 +97,10 @@ touchpoint.backend.environments {
                     domesticAnnual="8a1288a38ff2af980190025b32591ccc"
                     restOfWorldMonthly="8a128ab18ff2af9301900255d77979ac"
                     restOfWorldAnnual="8a1299788ff2ec100190024d1e3b1a09"
+                    domesticMonthlyV2="8a128dfb91f04b9a0191fa315d091c51"
+                    domesticAnnualV2="8a128dfb91f04b9a0191fa30ae2e1b7e"
+                    restOfWorldMonthlyV2="8a12891291f04b9d0191fa2ffbe10975"
+                    restOfWorldAnnualV2="8a129c2591f06a5d0191fa2edb383026"
                 }
             }
         }
