--- a/conf/touchpoint.CODE.conf
+++ b/conf/touchpoint.CODE.conf
@@ -112,6 +112,10 @@ touchpoint.backend.environments {
                     domesticAnnual="8ad081dd8ff24a9a019001d95e4e3574"
                     restOfWorldMonthly="8ad081dd8ff24a9a019001df2ce83657"
                     restOfWorldAnnual="8ad097b48ff26452019001e65bbf2ca8"
+                    domesticMonthlyV2="8ad081dd91dae1d30191e0ce082d18d3"
+                    domesticAnnualV2="8ad097b491daf9180191e0cd58e5180b"
+                    restOfWorldMonthlyV2="8ad097b491daf9180191e0cdba5f183c"
+                    restOfWorldAnnualV2="8ad097b491daf9180191e0cdf34e185e"
                 }
             }
         }
