Make promo code tool use IMDSv2

--- a/cloudformation/memsub-promotions-cf.yaml
+++ b/cloudformation/memsub-promotions-cf.yaml
@@ -204,6 +204,8 @@ Resources:
       - !Ref 'InstanceSecurityGroup'
       - !Ref WazuhSecurityGroup
       InstanceType: t4g.micro
+      MetadataOptions:
+        HttpTokens: required
       AssociatePublicIpAddress: 'False'
       IamInstanceProfile: !Ref 'InstanceProfile'
       UserData:
