--- a/.github/workflows/memsub-promotions-lambdas.yml
+++ b/.github/workflows/memsub-promotions-lambdas.yml
@@ -20,7 +20,7 @@ jobs:
       contents: read
 
     name: memsub-promotions-lambdas
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     steps:
       - name: Checkout repo
         uses: actions/checkout@v3
@@ -28,7 +28,7 @@ jobs:
       - name: Use Node.js
         uses: actions/setup-node@v3
         with:
-          node-version-file: './lambdas/.nvmrc'
+          node-version-file: "./lambdas/.nvmrc"
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v2
