--- a/.github/workflows/memsub-promotions.yml
+++ b/.github/workflows/memsub-promotions.yml
@@ -20,7 +20,7 @@ jobs:
       contents: read
 
     name: memsub-promotions
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     steps:
       - name: Checkout repo
         uses: actions/checkout@v3
@@ -28,7 +28,7 @@ jobs:
       - name: Use Node.js
         uses: actions/setup-node@v3
         with:
-          node-version-file: './frontend/.nvmrc'
+          node-version-file: "./frontend/.nvmrc"
 
       - name: Test + build
         working-directory: ./frontend
