--- a/.github/workflows/sbt-dependency-graph.yaml
+++ b/.github/workflows/sbt-dependency-graph.yaml
@@ -3,11 +3,10 @@ on:
   push:
     branches:
       - main
-      - sbt-dependency-graph-08dedb6fd406ede6
-  workflow_dispatch: 
+  workflow_dispatch:
 jobs:
   dependency-graph:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     steps:
       - name: Checkout branch
         id: checkout
