feat: add cooldown period to Dependabot and enable GitHub Actions updates

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -6,12 +6,25 @@
 version: 2
 updates:
   - package-ecosystem: "npm" # Frontend
-    directory: "/frontend" 
+    directory: "/frontend"
     schedule:
       interval: "weekly"
     open-pull-requests-limit: 10
+    cooldown:
+      default-days: 7
+
   - package-ecosystem: "npm" # Lambdas
-    directory: "/lambdas" 
+    directory: "/lambdas"
     schedule:
       interval: "weekly"
     open-pull-requests-limit: 10
+    cooldown:
+      default-days: 7
+
+  - package-ecosystem: "github-actions"
+    directory: "/"
+    schedule:
+      interval: "weekly"
+    open-pull-requests-limit: 10
+    cooldown:
+      default-days: 7
