Add pull-requests permission for workflow

--- a/.github/workflows/memsub-promotions-lambdas.yml
+++ b/.github/workflows/memsub-promotions-lambdas.yml
@@ -18,6 +18,7 @@ jobs:
     permissions:
       id-token: write
       contents: read
+      pull-requests: write #required by guardian/actions-riff-raff
 
     name: memsub-promotions-lambdas
     runs-on: ubuntu-latest
